--- a/9HugMoment/9HugMoment/Base.lproj/Trending.storyboard
+++ b/9HugMoment/9HugMoment/Base.lproj/Trending.storyboard
@@ -45,7 +45,7 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="V3w-zv-1Xt" userLabel="Header View">
                                         <rect key="frame" x="0.0" y="0.0" width="320" height="45"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Moments" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9aW-7V-t5H">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Public" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9aW-7V-t5H">
                                                 <rect key="frame" x="50" y="12" width="220" height="21"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="220" id="ILG-dy-c1k"/>
@@ -98,7 +98,7 @@
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
                     <connections>
-                        <outlet property="contentView" destination="NdO-YG-2z1" id="faX-9q-YE9"/>
+                        <outlet property="contentView" destination="NdO-YG-2z1" id="WjX-RF-tHZ"/>
                         <outlet property="messagesTableView" destination="Iw5-Sx-IO9" id="weA-9u-RJ9"/>
                         <segue destination="Sez-qI-75R" kind="push" identifier="pushCaptureVideoViewController" id="vYE-wn-f0s"/>
                         <segue destination="HcW-8P-sdX" kind="push" identifier="pushMessageDetailsViewController" id="IIx-oo-yMx"/>
@@ -220,7 +220,7 @@
                                             <constraint firstAttribute="height" constant="37" id="4ep-dk-Mk0"/>
                                             <constraint firstAttribute="width" constant="37" id="8PS-bf-eRR"/>
                                         </constraints>
-                                        <state key="normal" image="camera" backgroundImage="28149A0C-ECFA-4EA9-A1C9-164AAC1D22D8">
+                                        <state key="normal" image="camera" backgroundImage="F3B396CA-B655-4CF3-AFA7-5B60D4090A56">
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                         <connections>
@@ -1199,7 +1199,9 @@
         </scene>
     </scenes>
     <resources>
-        <image name="28149A0C-ECFA-4EA9-A1C9-164AAC1D22D8" width="37" height="37">
+        <image name="5_floral_on_the_right" width="320" height="320"/>
+        <image name="9hug_logo" width="250" height="250"/>
+        <image name="F3B396CA-B655-4CF3-AFA7-5B60D4090A56" width="37" height="37">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPj9YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQsLzI4O1UkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
@@ -1341,8 +1343,6 @@ wx7MHt8e4x72HwEfCh8PHxcfGh8fHy4fMh85H0EfTh9TH1UfVx9cH2QfZx9sH3Qfdx+JH4wfkQAAAAAA
 AAIBAAAAAAAAAEIAAAAAAAAAAAAAAAAAAB+TA
 </mutableData>
         </image>
-        <image name="5_floral_on_the_right" width="320" height="320"/>
-        <image name="9hug_logo" width="250" height="250"/>
         <image name="btn_add_music" width="27" height="27"/>
         <image name="btn_add_music_hover_bordeaux" width="27" height="27"/>
         <image name="btn_frame_white" width="30" height="28"/>
