--- a/9HugMoment/9HugMoment/Classes/UIs/VideoFilter/VideoFilterActionView.xib
+++ b/9HugMoment/9HugMoment/Classes/UIs/VideoFilter/VideoFilterActionView.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
@@ -7,23 +7,29 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="center" id="iN0-l3-epB" customClass="VideoFilterActionView">
+        <view autoresizesSubviews="NO" clipsSubviews="YES" contentMode="center" id="iN0-l3-epB" customClass="VideoFilterActionView">
             <rect key="frame" x="0.0" y="0.0" width="60" height="80"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LFE-df-79a">
+                <view autoresizesSubviews="NO" clipsSubviews="YES" contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="LFE-df-79a">
                     <rect key="frame" x="0.0" y="0.0" width="60" height="80"/>
                     <subviews>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="lGF-EI-f6d" userLabel="Thumbnail Image View">
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_default_no_image" translatesAutoresizingMaskIntoConstraints="NO" id="lGF-EI-f6d" userLabel="Thumbnail Image View">
                             <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="60" id="CiI-iF-h5O"/>
+                                <constraint firstAttribute="height" constant="60" id="h9G-MM-MiA"/>
                             </constraints>
                         </imageView>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_download_cloud" translatesAutoresizingMaskIntoConstraints="NO" id="V42-or-CVw" userLabel="Download Image View">
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_download_cloud" translatesAutoresizingMaskIntoConstraints="NO" id="V42-or-CVw" userLabel="Download Image View">
                             <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="60" id="Wc7-CS-cY6"/>
+                                <constraint firstAttribute="height" constant="60" id="wNT-DA-tXl"/>
+                            </constraints>
+                        </imageView>
+                        <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="play-icon" translatesAutoresizingMaskIntoConstraints="NO" id="32j-vi-q1H">
+                            <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="60" id="6U9-yh-Ekn"/>
                             </constraints>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="text" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qzx-o5-9EE" userLabel="Filter Name">
@@ -32,7 +38,7 @@
                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WYR-tR-tMX">
+                        <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WYR-tR-tMX">
                             <rect key="frame" x="0.0" y="0.0" width="60" height="80"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             <state key="normal">
@@ -45,29 +51,32 @@
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstItem="V42-or-CVw" firstAttribute="top" secondItem="LFE-df-79a" secondAttribute="top" id="1my-sl-yOk"/>
-                        <constraint firstAttribute="bottom" secondItem="qzx-o5-9EE" secondAttribute="bottom" id="APU-Bu-24b"/>
-                        <constraint firstAttribute="bottom" secondItem="WYR-tR-tMX" secondAttribute="bottom" id="IRU-8i-VOu"/>
-                        <constraint firstItem="lGF-EI-f6d" firstAttribute="top" secondItem="LFE-df-79a" secondAttribute="top" id="LN1-vK-De9"/>
-                        <constraint firstAttribute="trailing" secondItem="WYR-tR-tMX" secondAttribute="trailing" id="Ofd-AJ-RxL"/>
-                        <constraint firstAttribute="trailing" secondItem="V42-or-CVw" secondAttribute="trailing" id="Qsd-dV-HVa"/>
-                        <constraint firstItem="lGF-EI-f6d" firstAttribute="leading" secondItem="LFE-df-79a" secondAttribute="leading" id="TrX-a1-ZF9"/>
-                        <constraint firstAttribute="trailing" secondItem="lGF-EI-f6d" secondAttribute="trailing" id="bY8-Oa-d70"/>
-                        <constraint firstItem="WYR-tR-tMX" firstAttribute="leading" secondItem="LFE-df-79a" secondAttribute="leading" id="eQM-Xf-d26"/>
-                        <constraint firstItem="qzx-o5-9EE" firstAttribute="leading" secondItem="LFE-df-79a" secondAttribute="leading" id="for-fO-nPb"/>
-                        <constraint firstItem="V42-or-CVw" firstAttribute="leading" secondItem="LFE-df-79a" secondAttribute="leading" id="gIH-Dn-FzE"/>
-                        <constraint firstItem="qzx-o5-9EE" firstAttribute="top" secondItem="lGF-EI-f6d" secondAttribute="bottom" id="j5t-QJ-xgy"/>
-                        <constraint firstItem="WYR-tR-tMX" firstAttribute="top" secondItem="LFE-df-79a" secondAttribute="top" id="nn6-EK-Qoo"/>
-                        <constraint firstAttribute="trailing" secondItem="qzx-o5-9EE" secondAttribute="trailing" id="vCj-gT-FJI"/>
+                        <constraint firstItem="lGF-EI-f6d" firstAttribute="top" secondItem="LFE-df-79a" secondAttribute="top" id="9PH-SY-57v"/>
+                        <constraint firstAttribute="trailing" secondItem="V42-or-CVw" secondAttribute="trailing" id="9XD-uo-JBo"/>
+                        <constraint firstItem="WYR-tR-tMX" firstAttribute="top" secondItem="LFE-df-79a" secondAttribute="top" id="9sp-TV-VA2"/>
+                        <constraint firstItem="qzx-o5-9EE" firstAttribute="leading" secondItem="LFE-df-79a" secondAttribute="leading" id="Knb-AA-txE"/>
+                        <constraint firstAttribute="trailing" secondItem="qzx-o5-9EE" secondAttribute="trailing" id="LDf-Qx-KDm"/>
+                        <constraint firstItem="32j-vi-q1H" firstAttribute="top" secondItem="LFE-df-79a" secondAttribute="top" id="TcC-Hx-Wya"/>
+                        <constraint firstItem="V42-or-CVw" firstAttribute="top" secondItem="LFE-df-79a" secondAttribute="top" id="X9D-dO-Ejq"/>
+                        <constraint firstAttribute="bottom" secondItem="qzx-o5-9EE" secondAttribute="bottom" id="ei8-cq-My3"/>
+                        <constraint firstItem="32j-vi-q1H" firstAttribute="leading" secondItem="LFE-df-79a" secondAttribute="leading" id="f6L-NE-24P"/>
+                        <constraint firstAttribute="trailing" secondItem="lGF-EI-f6d" secondAttribute="trailing" id="k5Q-fM-y3X"/>
+                        <constraint firstItem="lGF-EI-f6d" firstAttribute="leading" secondItem="LFE-df-79a" secondAttribute="leading" id="nSm-m8-dVg"/>
+                        <constraint firstAttribute="bottom" secondItem="WYR-tR-tMX" secondAttribute="bottom" id="pAM-Zj-hSI"/>
+                        <constraint firstItem="V42-or-CVw" firstAttribute="leading" secondItem="LFE-df-79a" secondAttribute="leading" id="rqj-HK-x0o"/>
+                        <constraint firstItem="WYR-tR-tMX" firstAttribute="leading" secondItem="LFE-df-79a" secondAttribute="leading" id="tYm-rH-mYW"/>
+                        <constraint firstAttribute="trailing" secondItem="32j-vi-q1H" secondAttribute="trailing" id="ulU-e5-8g0"/>
+                        <constraint firstItem="qzx-o5-9EE" firstAttribute="top" secondItem="V42-or-CVw" secondAttribute="top" constant="60" id="vA6-k2-m0Q"/>
+                        <constraint firstAttribute="trailing" secondItem="WYR-tR-tMX" secondAttribute="trailing" id="yMv-SG-eLD"/>
                     </constraints>
                 </view>
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="LFE-df-79a" secondAttribute="trailing" id="GVa-5B-vG9"/>
-                <constraint firstItem="LFE-df-79a" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="IQP-3C-3kM"/>
-                <constraint firstAttribute="bottom" secondItem="LFE-df-79a" secondAttribute="bottom" id="M72-rx-6EQ"/>
-                <constraint firstItem="LFE-df-79a" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="xDF-de-pg8"/>
+                <constraint firstItem="LFE-df-79a" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="FgV-iz-2qO"/>
+                <constraint firstAttribute="trailing" secondItem="LFE-df-79a" secondAttribute="trailing" id="ZtY-hq-HBk"/>
+                <constraint firstItem="LFE-df-79a" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="bYy-ex-AQI"/>
+                <constraint firstAttribute="bottom" secondItem="LFE-df-79a" secondAttribute="bottom" id="fxB-3i-UT6"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <nil key="simulatedTopBarMetrics"/>
@@ -77,11 +86,20 @@
                 <outlet property="downloadFilterImageView" destination="V42-or-CVw" id="ZkK-2n-gaG"/>
                 <outlet property="filterButton" destination="WYR-tR-tMX" id="Fy0-9B-qhw"/>
                 <outlet property="filterNameLabel" destination="qzx-o5-9EE" id="QZN-0C-dDK"/>
+                <outlet property="selectedImage" destination="32j-vi-q1H" id="EY6-dm-DTy"/>
                 <outlet property="thumbnailImageView" destination="lGF-EI-f6d" id="dJq-lg-6S6"/>
             </connections>
+            <point key="canvasLocation" x="866" y="379"/>
         </view>
     </objects>
     <resources>
+        <image name="icon_default_no_image" width="64" height="64"/>
         <image name="icon_download_cloud" width="64" height="64"/>
+        <image name="play-icon" width="60" height="60"/>
     </resources>
+    <simulatedMetricsContainer key="defaultSimulatedMetrics">
+        <simulatedStatusBarMetrics key="statusBar"/>
+        <simulatedOrientationMetrics key="orientation"/>
+        <simulatedScreenMetrics key="destination" type="retina4"/>
+    </simulatedMetricsContainer>
 </document>
